[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"   
log = "0.4.14"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.14"
http-body = "0.4.5" 
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.3"
bytes = "1"
async-trait = "0.1"
toml = "0.5.9"
url = "2.3.0"
cosmscan-models = { path = "../models", version = "0.1.0" }