[package]
name = "cosmos-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tendermint = "0.23.8"
tendermint-rpc = { version = "0.23.8", features = ["http-client"]}
cosmos-sdk-proto = "0.14.0"
tonic = "0.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10.2"
log = "0.4.14"