[package]
name = "cosmscan-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"   
sha2 = "0.10.2"
futures = "0.3"
async-trait = "0.1.52"
env_logger = "0.9.0"
log = "0.4.14"
toml = "0.5.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tendermint = "0.23.8"
tendermint-rpc = { version = "0.23.8", features = ["http-client"]}
cosmscan-models = { path = "../models", version = "0.1.0" }
cosmos-client = { path = "../cosmos-client", version = "0.1.0" }
cosmos-sdk-proto = "0.14.0"
tonic = "0.8.0"