[package]
name = "cosmoscout-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"   
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.9"
diesel = { version = "1.4.4", features = ["postgres", "sqlite", "chrono", "serde_json", "r2d2"] }

[dev-dependencies]
serial_test = "*"