[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
async-trait = "0.1.52"
env_logger = "0.9.0"
log = "0.4.14"
toml = "0.5.9"
serde = "1.0"
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tendermint = "0.23.8"
tendermint-rpc = { version = "0.23.8", features = ["http-client"]}