[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0", features = ["derive"] }
cosmscan-models = { path = "../models", version = "0.1.0" }
cosmscan-indexer = { path = "../indexer", version = "0.1.0" }
api-server = { path = "../api-server", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }